--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+    <script src="https://kit.fontawesome.com/3b619d716e.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,9 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <script src="./highcharts.js"></script>
-    <script src="./histogram-bellcurve.js"></script>
+    <title>Data Table</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
