--- a/public/distribution.html
+++ b/public/distribution.html
@@ -13,21 +13,22 @@
 <html>
   <head>
       <!-- jQuery needed for annotations -->
-    <!-- <script src="http://code.highcharts.com/modules/exporting.js"></script> -->
-    <!-- <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"></script> -->
-      <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-      </script>
-      <script src="./highcharts.js"></script>
-      <script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
-      <script src="https://code.highcharts.com/highcharts-more.js"></script>
-      <script src="./annotations.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous">
+    </script>
+    <script src="./highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="./annotations.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
+
     <title>Distribution Analysis</title>
   </head>
   <body>
-    <div style="width:450px;" id="container">Loading</div>
+    <span style="display: flex;"><div id="histogramVis"></div><div id="boxplotVis"></div></span>
+    <div style="width:450px;" id="container"></div>
     <script>
       window.opener.postMessage('ready', '*');
       const container = document.getElementById('container');
@@ -42,138 +43,147 @@
           colAStdev,
           colBMean,
           colBStdev,
+          // histogram,
           boxPlotData, } = event.data;
-          console.log(boxPlotData[8])
-        const options = {
-          chart: {
-            marginTop: 100,
-            height: 400,
-            width: 400,
-            inverted: true,
-          },
-          credits: false,
-          title: {
-            text: `Distribution of ${colYLabel}`
-          },
-          xAxis: [{
-            title: { text: 'Data' },
-          }, {
-              title: { text: 'Histogram' },
-              opposite: true
-          }],
 
-          yAxis: [{
-              title: { text: 'Data' }
-          }, {
-              title: { text: 'Histogram' },
-              opposite: true
-          }],
-          legend: {
-            layout: 'vertical',
-            align: 'right',
-            verticalAlign: 'middle'
-          },
+          // set the dimensions and margins of the graph
+          const margin = {top: 20, right: 30, bottom: 40, left: 50};
+          const width = 260 - margin.left - margin.right;
+          const height = 400 - margin.top - margin.bottom;
 
-          plotOptions: {
-            series: {
-              jitter: {
-                x: 0.3,
-                y: 0.3
-              },
-              label: {
-                connectorAllowed: false
-              },
-              stickyTracking: false,
-              events: {
-                legendItemClick: function () {
-                  if (this.visible) {
-                    return false;
-                  } else {
-                    let series = this.chart.series,
-                    i = series.length,
-                    otherSeries;
-                    while (i--) {
-                      otherSeries = series[i]
-                      if (otherSeries !== this && otherSeries.visible) {
-                        otherSeries.hide();
-                      }
-                    }
-                  }
-                }
-              },
-            }
-          },
-          series: [
-            {
-              name: 'Histogram',
-              type: 'histogram',
-              xAxis: 1,
-              yAxis: 1,
-              baseSeries: 's1',
-              borderWidth: 0,
-              // binsNumber: 10,
-            },
-            {
-              name: 'Scatter',
-              type: 'scatter',
-              id: 's1',
-              data: colB,
-              visible: false,
-              borderWidth: 0,
-            },
-            {
-              id: 'boxplot',
-              name: 'Boxplot',
-              type: 'boxplot',
-              visible: false,
-              medianColor: 'red',
-              // data: [boxPlotData.values]
-              data: [
-              {
-                high: boxPlotData[8],
-                q3: boxPlotData[5],
-                median: boxPlotData[4],
-                q1: boxPlotData[3],
-                low: boxPlotData[0],
-              },
-              ]
-            },
-            {
-              id: 'outliers',
-              name: 'Outliers',
-              type: 'scatter',
-              linkedTo: 'boxplot',
-              color: Highcharts.getOptions().colors[2],
-              marker: {
-                enabled: true,
-                radius: 2,
-                fillColor: 'transparent',
-                lineColor: 'rgba(40,40,56,0.5)',
-                lineWidth: 1
-              },
-              // data: [boxPlotData.outliers]
-            }
-          ],
-
-          responsive: {
-            rules: [{
-              condition: {
-                maxWidth: 500
-              },
-              chartOptions: {
-                legend: {
-                  layout: 'horizontal',
-                  align: 'center',
-                  verticalAlign: 'bottom'
-                }
-              }
-            }]
+          function makeSvg(id) {
+            return (
+              d3.select(`#${id}`)
+              .append("svg")
+              .attr("width", width + margin.left + margin.right)
+              .attr("height", height + margin.top + margin.bottom)
+              .append("g")
+              .attr("transform", `translate(${margin.left}, ${margin.top})`)
+            )
           }
-        }
-        const chart = Highcharts.chart(container, options);
-        // Hack to fix the ticks not appearing correctly on first render
-        chart.series[0].hide();
-        chart.series[0].show();
+
+          // append the histogram svg object to the body of the page
+          const histSvg = makeSvg('histogramVis');
+          const boxSvg = makeSvg('boxplotVis');
+
+          // Parse the Data
+          // const boxData = [12, 10, 7, 6, 2, 10, 9, 6, 4, 4, 12, 9, 8, 3, 11, 8, 7, 6, 2, 11, 10, 7, 5, 3, 5];
+          const nBins = 12;
+
+          // Compute summary statistics used for the box:
+          const boxDataSorted = colB.sort(d3.ascending);
+          const q1 = d3.quantile(boxDataSorted, .25);
+          const median = d3.quantile(boxDataSorted, .5);
+          const q3 = d3.quantile(boxDataSorted, .75);
+          // const interQuantileRange = q3 - q1;
+          const min = boxDataSorted[0];
+          const max = boxDataSorted[boxDataSorted.length - 1];
+          const center = 1;
+          const boxWidth = 40;
+
+          // Add X axis
+          const x = d3.scaleLinear()
+            .range([ 0, width])
+
+          // Y axis
+          const y = d3.scaleLinear()
+            .range([ height, 0 ])
+            .domain([Math.min(...boxDataSorted) - 1, Math.max(...boxDataSorted) + 2])
+          histSvg.append("g")
+            .call(d3.axisLeft(y))
+
+          // set the parameters for the histogram
+          const histogram = d3.histogram()
+            // .value(function(d) { return d; })   // I need to give the vector of value
+            .domain(y.domain())  // then the domain of the graphic
+            .thresholds(y.ticks(nBins)); // then the numbers of bins
+
+          // And apply this function to data to get the bins
+          const bins = histogram(boxDataSorted);
+
+          function maxBinLength(arr) {
+            let highest = 0;
+            for (let i = 0; i < arr.length; i++) {
+              if (arr[i].length > highest) {
+                highest = arr[i].length;
+              }
+            }
+            return highest;
+          }
+
+          x.domain([0, maxBinLength(bins)])
+          histSvg.append("g")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x).ticks(5))
+
+          // Histogram Bars
+          histSvg.selectAll("myRect")
+            .data(bins)
+            .enter()
+            .append("rect")
+            .attr("x", 1 )
+            .attr("y", function(d) {
+              return y(d.x1);
+            })
+            .attr("width", function(d) {
+              return x(d.length);
+            })
+            .attr("height", function(d){
+              console.log(d)
+              return y(d.x0) - y(d.x1)
+            })
+            .attr("fill", "#69b3a2")
+
+
+          // Boxplot
+          // Show the main vertical line
+          boxSvg
+            .append("line")
+            .attr("x1", center)
+            .attr("x2", center)
+            .attr("y1", y(min) )
+            .attr("y2", y(max) )
+            .attr("stroke", "black")
+          boxSvg
+            .append("line")
+            .attr("x1", center)
+            .attr("x2", center)
+            .attr("y1", y(min))
+            .attr("y2", y(max))
+            .attr("stroke", "black")
+          boxSvg
+            .append("rect")
+            .attr("x", center - boxWidth/2)
+            .attr("y", y(q3))
+            .attr("height", (y(q1)-y(q3)) )
+            .attr("width", boxWidth )
+            .attr("stroke", "black")
+            .style("fill", "#69b3a2")
+
+          // show median, min and max horizontal lines
+          boxSvg
+            .selectAll("toto")
+            .data([min, median, max])
+            .enter()
+            .append("line")
+            .attr("x1", center-boxWidth/2)
+            .attr("x2", center+boxWidth/2)
+            .attr("y1", function(d){ return(y(d))} )
+            .attr("y2", function(d){ return(y(d))} )
+            .attr("stroke", "black")
+
+          var jitterWidth = 10
+          boxSvg
+            .selectAll("indPoints")
+            .data(boxDataSorted)
+            .enter()
+            .append("circle")
+            .attr("cx", function(d){return((center - boxWidth/10))})
+            .attr("cy", function(d){return(y(d) - jitterWidth/2 + Math.random()*jitterWidth )})
+            .attr("r", 4)
+            .style("fill", "white")
+            .attr("stroke", "black")
+
         const template = `<div style="text-align: center; margin: 0 3em;">
             <h4>Quantiles</h4>
               <table style="width: 100%;">
