remove confid bands from linear regression, replace A B C col headers with Column 1, 2 etc...,

--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -123,38 +123,38 @@
               data: linearRegressionLinePoints,
               visible: false,
             },
-            {
-              name: 'Points with Linear Regression Line and Confidence bands',
-              type: 'scatter',
-              id: 's3',
-              data: tempABVals,
-              visible: false,
-            },
-            {
-              name: 'Linear Regression Line',
-              type: 'line',
-              linkedTo: 's3',
-              data: linearRegressionLinePoints,
-              visible: false,
-            },
-            {
-              name: 'Confidence Band Lower',
-              type: 'line',
-              linkedTo: 's3',
-              stroke: 'red',
-              dashStyle: 'dot',
-              data: lowerBand,
-              visible: false,
-            },
-            {
-              name: 'Confidence Band Upper',
-              type: 'line',
-              linkedTo: 's3',
-              stroke: 'red',
-              dashStyle: 'dot',
-              data: upperBand,
-              visible: false,
-            },
+            // {
+            //   name: 'Points with Linear Regression Line and Confidence bands',
+            //   type: 'scatter',
+            //   id: 's3',
+            //   data: tempABVals,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Linear Regression Line',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   data: linearRegressionLinePoints,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Confidence Band Lower',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   stroke: 'red',
+            //   dashStyle: 'dot',
+            //   data: lowerBand,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Confidence Band Upper',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   stroke: 'red',
+            //   dashStyle: 'dot',
+            //   data: upperBand,
+            //   visible: false,
+            // },
             {
               name: 'Histogram',
               type: 'column',
