remove right side column selector in distribution modal, update cell values on activeCell unmount, setTimeout for ref focus, error validation for empty columns, fix bug with clicking distribution bars, create columns on activating cell, activate cell on left click only, grey out cells without id (that arent in blank clickable row)

--- a/public/distribution.html
+++ b/public/distribution.html
@@ -154,6 +154,7 @@
 
             function onClick(bar) {
               const thisBar = d3.select(this);
+              console.log(bar, thisBar)
               let metaKeyPressed = false;
               if (d3.event.metaKey) {
                 metaKeyPressed = true;
