text changes, ping server

--- a/public/distribution.html
+++ b/public/distribution.html
@@ -299,7 +299,7 @@
                   <td>${boxDataSorted.length}</td>
                 </tr>
                 <tr>
-                  <td>Skew:</td>
+                  <td>Skewness:</td>
                   <td>${skew.toFixed(6) / 1}</td>
                 </tr>
                 <tr>
