fix bug when fit analysis has less than 3 values in a column, improve error messages, remove console logs

--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
       </script>
       <script src="./highcharts.js"></script>
-      <script src="https://code.highcharts.com/highcharts-more.js"></script>
+      <!-- <script src="https://code.highcharts.com/highcharts-more.js"></script> -->
       <script src="./annotations.js"></script>
     <title>Data Analysis</title>
   </head>
