--- a/public/distribution.html
+++ b/public/distribution.html
@@ -40,7 +40,9 @@
           colBStdev,
           boxPlotData,
           kurtosis,
-          skew,} = event.data;
+          skew,
+          numberOfBins,
+        } = event.data;
 
           const titleEl = document.createElement('div');
           titleEl.style.textAlign = 'center';
@@ -52,7 +54,7 @@
           // set the dimensions and margins of the graph
           const margin = {top: 20, right: 30, bottom: 40, left: 50};
           const width = 260 - margin.left - margin.right;
-          const height = 400 - margin.top - margin.bottom;
+          const height = 300 - margin.top - margin.bottom;
 
           function makeSvg(id, customWidth) {
             return (
@@ -71,7 +73,6 @@
 
           // Parse the Data
           // const boxData = [12, 10, 7, 6, 2, 10, 9, 6, 4, 4, 12, 9, 8, 3, 11, 8, 7, 6, 2, 11, 10, 7, 5, 3, 5];
-          const nBins = 10;
 
           // Compute summary statistics used for the box:
           const boxDataSorted = colB.sort(d3.ascending);
@@ -84,24 +85,22 @@
           const center = 1;
           const boxWidth = 40;
 
-          // Note they are different. Scipy's value is correct.
-          console.log(colBStdev, d3.deviation(colB));
-
           // Add X axis
           const x = d3.scaleLinear()
             .range([ 0, width])
 
           // Y axis
           const y = d3.scaleLinear()
-            .range([ height, 0 ])
-            .domain([Math.min(...boxDataSorted) - 1, Math.max(...boxDataSorted) + 1])
+            // .nice() rounds the tick values to nice numbers
+            .domain([min - min*.05, max + max*.05]).nice()
+            .range([height, 0])
           histSvg.append("g")
             .call(d3.axisLeft(y))
 
           // set the parameters for the histogram
           const histogram = d3.histogram()
             .domain(y.domain())  // then the domain of the graphic
-            .thresholds(y.ticks(nBins)); // then the numbers of bins
+            .thresholds(y.ticks(numberOfBins)); // then the numbers of bins
 
           // And apply this function to data to get the bins
           const bins = histogram(boxDataSorted);
@@ -134,6 +133,7 @@
               return x(d.length);
             })
             .attr("height", function(d) {
+              // The -1 adds a little bit of padding between bars
               return y(d.x0) - y(d.x1) - 1
             })
             .attr("fill", "#69b3a2")
@@ -152,6 +152,7 @@
             .on('click', onClick)
 
             function onClick(bar) {
+              const thisBar = d3.select(this);
               let metaKeyPressed = false;
               if (d3.event.metaKey) {
                 metaKeyPressed = true;
@@ -159,12 +160,21 @@
                 // If meta key is not held down, remove other highlighted bars
                 d3.selectAll('rect').style("fill", "#69b3a2")
               }
-              d3.select(this).style("fill", "red")
+              // TODO: If holding meta key and click on bar again, deselect cells
+              // if (metaKeyPressed && thisBar.style("fill") === 'red') {
+              //   thisBar.style("fill", "#69b3a2");
+              //   window.opener.postMessage({
+              //     message: 'unclicked',
+              //     metaKeyPressed,
+              //     vals: bar,
+              //   }, '*');
+              //   return;
+              // }
+              thisBar.style("fill", "red")
               window.opener.postMessage({
                 message: 'clicked',
                 metaKeyPressed,
-                val: bar[0],
-                occurences: bar.length
+                vals: bar,
               }, '*');
             }
           // Boxplot
@@ -191,7 +201,6 @@
             .attr("width", boxWidth )
             .attr("stroke", "black")
             .style("fill", "#69b3a2")
-
           // show median, min and max horizontal lines
           boxSvg
             .selectAll("toto")
@@ -204,7 +213,7 @@
             .attr("y2", function(d){ return(y(d))} )
             .attr("stroke", "black")
 
-          var jitterWidth = 10
+          const jitterWidth = 10
           boxSvg
             .selectAll("indPoints")
             .data(boxDataSorted)
@@ -215,7 +224,6 @@
             .attr("r", 4)
             .style("fill", "white")
             .attr("stroke", "black")
-
 
         const template = `<div style="text-align: center; margin: 0 3em;">
             <h4>Quantiles</h4>
@@ -228,22 +236,22 @@
                 <tr>
                   <td>99.5%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .995)}</td>
+                  <td>${d3.quantile(boxDataSorted, .995).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>97.5%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .975)}</td>
+                  <td>${d3.quantile(boxDataSorted, .975).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>90.0%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .9)}</td>
+                  <td>${d3.quantile(boxDataSorted, .9).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>75.0%:</td>
                   <td>Quartile 3</td>
-                  <td>${q3}</td>
+                  <td>${q3.toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>50.0%:</td>
@@ -253,22 +261,22 @@
                 <tr>
                   <td>25.0%:</td>
                   <td>Quartile 1</td>
-                  <td>${q1}</td>
+                  <td>${q1.toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>10.0%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .1)}</td>
+                  <td>${d3.quantile(boxDataSorted, .1).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>2.5%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .025)}</td>
+                  <td>${d3.quantile(boxDataSorted, .025).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>0.5%:</td>
                   <td></td>
-                  <td>${d3.quantile(boxDataSorted, .005)}</td>
+                  <td>${d3.quantile(boxDataSorted, .005).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>0.0%:</td>
@@ -280,23 +288,23 @@
               <table style="width: 100%;">
                 <tr>
                   <td>Mean:</td>
-                  <td>${d3.mean(boxDataSorted)}</td>
+                  <td>${d3.mean(boxDataSorted).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>Std Dev:</td>
-                  <td>${d3.deviation(colB)}</td>
+                  <td>${d3.deviation(colB).toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>Count:</td>
                   <td>${boxDataSorted.length}</td>
                 </tr>
                 <tr>
-                  <td>Skew:</td>
-                  <td>${skew}</td>
+                  <td>Skewness:</td>
+                  <td>${skew.toFixed(6) / 1}</td>
                 </tr>
                 <tr>
                   <td>Kurtosis:</td>
-                  <td>${kurtosis}</td>
+                  <td>${kurtosis.toFixed(6) / 1}</td>
                 </tr>
               </table>
           </div>`
