--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
       </script>
       <script src="./highcharts.js"></script>
-      <script src="https://code.highcharts.com/highcharts-more.js"></script>
+      <!-- <script src="https://code.highcharts.com/highcharts-more.js"></script> -->
       <script src="./annotations.js"></script>
     <title>Data Analysis</title>
   </head>
@@ -60,11 +60,9 @@
           },
           xAxis: {
             title: { text: colXLabel },
-            min: 0
           },
           yAxis: {
             title: { text: colYLabel },
-            min: 0
           },
           legend: {
             layout: 'vertical',
@@ -123,38 +121,38 @@
               data: linearRegressionLinePoints,
               visible: false,
             },
-            {
-              name: 'Points with Linear Regression Line and Confidence bands',
-              type: 'scatter',
-              id: 's3',
-              data: tempABVals,
-              visible: false,
-            },
-            {
-              name: 'Linear Regression Line',
-              type: 'line',
-              linkedTo: 's3',
-              data: linearRegressionLinePoints,
-              visible: false,
-            },
-            {
-              name: 'Confidence Band Lower',
-              type: 'line',
-              linkedTo: 's3',
-              stroke: 'red',
-              dashStyle: 'dot',
-              data: lowerBand,
-              visible: false,
-            },
-            {
-              name: 'Confidence Band Upper',
-              type: 'line',
-              linkedTo: 's3',
-              stroke: 'red',
-              dashStyle: 'dot',
-              data: upperBand,
-              visible: false,
-            },
+            // {
+            //   name: 'Points with Linear Regression Line and Confidence bands',
+            //   type: 'scatter',
+            //   id: 's3',
+            //   data: tempABVals,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Linear Regression Line',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   data: linearRegressionLinePoints,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Confidence Band Lower',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   stroke: 'red',
+            //   dashStyle: 'dot',
+            //   data: lowerBand,
+            //   visible: false,
+            // },
+            // {
+            //   name: 'Confidence Band Upper',
+            //   type: 'line',
+            //   linkedTo: 's3',
+            //   stroke: 'red',
+            //   dashStyle: 'dot',
+            //   data: upperBand,
+            //   visible: false,
+            // },
             {
               name: 'Histogram',
               type: 'column',
@@ -191,7 +189,7 @@
                   <td>${corrcoef}</td>
                 </tr>
                 <tr>
-                  <td>P-Value:</td>
+                  <td>p:</td>
                   ${evaluatePValue(pValue)}
                 </tr>
                 <tr>
