--- a/public/distribution.html
+++ b/public/distribution.html
@@ -1,19 +1,6 @@
-<!--
-  Analyses that should be done together..
-  Exploratory data analysis:
-    - Distributional properties (depends on kind of data, (eg: nominal, ordinal))
-      - Mean/Median/Mode/Shape, etc
-      - Goodness of fit
-      - Normality - Skew/Kurtosis
-      - Box and whisker/(preferably Violin)
-      - Histogram
-      - Between 10-12 bins is ideal for normal distribution
- -->
-
 <html>
   <head>
-    <script src="https://d3js.org/d3.v4.js"></script>
-
+    <script src="./d3-v4.js"></script>
     <title>Distribution Analysis</title>
   </head>
   <body>
