--- a/public/distribution.html
+++ b/public/distribution.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <script src="./d3-v4.js"></script>
+    <script src="./d3.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="analysis-window.css">
     <title>Distribution Analysis</title>
   </head>
   <body>
