--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -1,96 +1,8 @@
 <html>
 
 <head>
-  <script src="./d3-v4.js"></script>
-  <style>
-    body {
-      margin: 0 auto;
-      display: table;
-      font-family: "Helvetica Neue", sans-serif;
-    }
-
-    .confidenceBands {
-      stroke-width: 2px;
-      stroke: red;
-      stroke-dasharray: 10, 5;
-      z-index: 1;
-    }
-
-    .confidenceBandsFit {
-      stroke-width: 2px;
-      stroke: red;
-      stroke-dasharray: 10, 5;
-      z-index: 1;
-    }
-
-    .degree2PolyLine {
-      stroke-width: 2px;
-      stroke: green;
-      z-index: 1;
-    }
-
-    #degree2PolyLine {
-      display: none;
-    }
-
-    .degree3PolyLine {
-      stroke-width: 2px;
-      stroke: darkmagenta;
-      z-index: 1;
-    }
-
-    #degree3PolyLine {
-      display: none;
-    }
-
-    .degree4PolyLine {
-      stroke-width: 2px;
-      stroke: saddlebrown;
-      z-index: 1;
-    }
-
-    #degree4PolyLine {
-      display: none;
-    }
-
-    .degree5PolyLine {
-      stroke-width: 2px;
-      stroke: goldenrod;
-      z-index: 1;
-    }
-
-    .degree6PolyLine {
-      stroke-width: 2px;
-      stroke: thistle;
-      z-index: 1;
-    }
-
-    div.tooltip {
-      position: absolute;
-      text-align: center;
-      width: 60px;
-      height: 28px;
-      padding: 2px;
-      font: 12px sans-serif;
-      background: lightsteelblue;
-      border: 0px;
-      border-radius: 8px;
-      pointer-events: none;
-    }
-
-    .equation {
-      font-size: 12px;
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    .linearRegressionLine {
-      stroke-width: 2px;
-      stroke: steelblue;
-      z-index: 1;
-    }
-
-  </style>
+  <script src="./d3.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="analysis-window.css">
   <title>Data Analysis</title>
 </head>
 
