--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -13,7 +13,7 @@
     <div style="margin-left: 2em;">
       <div><input type="checkbox" value="histogramBorders" onclick="toggleChartElement(this)" checked>Histogram Borders</div>
       <br>
-      <div><input type="checkbox" onclick="centerPoly(this)" checked>Center Polynomial Regressions</div>
+      <div><input type="checkbox" checked>Center Polynomial Regressions</div>
       <div><input type="checkbox" value="linearRegressionLine" onclick="toggleChartElement(this)">Linear Fit <span style="font-size: 1.5em; color: steelblue;">&#9656</span></div>
       <div style="margin-left: 2em;"><input type="checkbox" value="confidenceBandsFit" onclick="toggleChartElement(this)">Confid Curves Fit <span style="font-size: 1.5em; color: red;">&#9656</span></div>
       <div style="margin-left: 2em;"><input type="checkbox" value="confidenceBands" onclick="toggleChartElement(this)">Confid Curves Indiv <span style="font-size: 1.5em; color: red;">&#9656</span></div>
