--- a/public/distribution.html
+++ b/public/distribution.html
@@ -7,6 +7,7 @@
   <body>
     <span id="charts" style="display: flex;"><div id="histogramVis"></div><div id="boxplotVis"></div></span>
     <div style="width:500px;" id="container"></div>
-    <script src="./distribution.js"></script>
+    <script src="template_helpers.js"></script>
+    <script src="distribution.js"></script>
   </body>
 </html>
