add bar chart, click bars to select rows on table, click legend to select groups, filter by strings

--- a/public/bar_chart.html
+++ b/public/bar_chart.html
@@ -8,9 +8,9 @@
 
 <body style="min-width: 100%; min-height: 100%;">
   <div style="text-align: center;" id="chart" class="chart"></div>
-  <div id="container"></div>
   <script src="template_helpers.js"></script>
   <script src="bar_chart.js"></script>
+  <div><input id="x-axis-scale" type="checkbox" checked>Toggle Ordinal Scaled X Axis</div>
 </body>
 
 </html>
