--- a/public/bar_chart_test.html
+++ b/public/bar_chart_test.html
@@ -11,6 +11,7 @@
   <div id="container"></div>
   <script src="template_helpers.js"></script>
   <script src="bar_chart_test.js"></script>
+  <div><input id="x-axis-scale" type="checkbox">Toggle Ordinal Scaled X Axis</div>
 </body>
 
 </html>
