--- a/public/bar_chart_test.html
+++ b/public/bar_chart_test.html
@@ -7,11 +7,12 @@
 </head>
 
 <body style="min-width: 100%; min-height: 100%;">
+  <div><input id="x-axis-scale" type="checkbox">Toggle Ordinal Scaled X Axis</div>
   <div style="text-align: center;" id="chart" class="chart"></div>
+  <div style="text-align: center;" class="sub-graphs" id="sub-graphs"></div>
   <div id="container"></div>
   <script src="template_helpers.js"></script>
   <script src="bar_chart_test.js"></script>
-  <div><input id="x-axis-scale" type="checkbox">Toggle Ordinal Scaled X Axis</div>
 </body>
 
 </html>
