--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Hotjar Tracking Code for https://spinstudydatatable.herokuapp.com/ -->
-<script>
+<!-- <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
       h._hjSettings={hjid:1552623,hjsv:6};
@@ -31,7 +31,7 @@
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
   })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+</script> -->
     <title>Data Table</title>
   </head>
   <body>
