remove checkbox, modeling type (scale) of x column determines x axis scale

--- a/public/bar_chart.html
+++ b/public/bar_chart.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="min-width: 100%; min-height: 100%;">
-  <div><input id="x-axis-scale" type="checkbox">Toggle Ordinal Scaled X Axis</div>
+  <!-- <div><input id="x-axis-scale" type="checkbox">Toggle Ordinal Scaled X Axis</div> -->
   <div style="text-align: center;" id="chart" class="chart"></div>
   <div style="text-align: center;" class="sub-graphs" id="sub-graphs"></div>
   <div id="container"></div>
