add save residuals button and functionality, add dropdown to linear regression, add oneway analysis type

--- a/public/oneway.html
+++ b/public/oneway.html
@@ -3,9 +3,7 @@
 <head>
   <script src="./d3.min.js"></script>
   <link rel="stylesheet" type="text/css" href="analysis-window.css">
-  <script src="slimselect.min.js"></script>
-  <link href="slimselect.min.css" rel="stylesheet"></link>
-  <title>Data Analysis</title>
+  <title>Oneway Analysis</title>
 </head>
 
 <body style="min-width: 100%; min-height: 100%;">
@@ -13,7 +11,7 @@
 
   <div id="container"></div>
   <script src="template_helpers.js"></script>
-  <script src="linear_regression.js"></script>
+  <script src="oneway.js"></script>
 </body>
 
 </html>
