change title of window

--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="analysis-window.css">
   <script src="slimselect.min.js"></script>
   <link href="slimselect.min.css" rel="stylesheet"></link>
-  <title>Data Analysis</title>
+  <title>Bivariate Analysis</title>
 </head>
 
 <body style="min-width: 100%; min-height: 100%;">
