loading indicator and error messages for analysis modals, more details for oneway analysis, boxplots and slimselect for oneway analysis

--- a/public/oneway.html
+++ b/public/oneway.html
@@ -3,6 +3,8 @@
 <head>
   <script src="./d3.min.js"></script>
   <link rel="stylesheet" type="text/css" href="analysis-window.css">
+  <script src="slimselect.min.js"></script>
+  <link href="slimselect.min.css" rel="stylesheet"></link>
   <title>Oneway Analysis</title>
 </head>
 
