change cloud function, refactor a lot

--- a/public/regression.html
+++ b/public/regression.html
@@ -13,7 +13,7 @@
 
   <div id="container"></div>
   <script src="template_helpers.js"></script>
-  <script src="linear_regression.js"></script>
+  <script src="regression.js"></script>
 </body>
 
 </html>
